--- a/HTML・CSS/HTML-work2/work2-lesson2.html
+++ b/HTML・CSS/HTML-work2/work2-lesson2.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../HTML-work2/work2-lesson2.css">
     <!-- ここに処理を記述 -->
     
     <title>work2-lesson2</title>
