--- a/HTML・CSS/HTML-work2/work2-lesson3.html
+++ b/HTML・CSS/HTML-work2/work2-lesson3.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../HTML-work2/work2-lesson3.css">
     <!--ここにCSSファイルを読み込む処理を記述-->
     
 
