--- a/HTML・CSS/HTML-work2/work2-lesson4.html
+++ b/HTML・CSS/HTML-work2/work2-lesson4.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../HTML-work2/work2-lesson4.css">
     <!--ここにCSSファイルを読み込む処理を記述-->
     
     <title>work2-lesson4</title>
@@ -13,8 +14,11 @@
         課題：②「プログラミングの世界へようこそ」の文字の背景色を黄色高さを70px、幅を360px
         上記が出来次第、保存し提出してください！
     -->
-
+<div class="red">
     <h1>Hello world.</h1>
-    <h2>プログラミングの世界へようこそ！</h2>
+</div>
+    <div class="yellow">
+ <h2>プログラミングの世界へようこそ！</h2>
+    </div>
 </body>
 </html>
