work2-lesson5.html

--- a/HTML・CSS/HTML-work2/work2-lesson5.html
+++ b/HTML・CSS/HTML-work2/work2-lesson5.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../HTML-work2/work2-lesson5.css">
     <!--ここにCSSファイルを読み込む処理を記述-->
 
     <title>work2-lesson5</title>
 </head>
 <body>
-    <p>赤色の文字</p>
-    <p>青色の文字</p>
-    <p>黒色の文字</p>
-    <p>赤色の文字</p>
+    <p class="red">赤色の文字</p>
+    <p class="blue">青色の文字</p>
+    <p class="black">黒色の文字</p>
+    <p class="red">赤色の文字</p>
 </body>
 </html>
 
 <!-- 課題：①Classで名前を付けて個別に指定しCSSをかける理由は何故なのかを、この下に記載して下さい。
 
-     理由：
+     理由：class名を指定することでその名前のついたものだけcssを反映させることができる
 
 
 
