--- a/HTML・CSS/HTML-work3/work3-lesson1.html
+++ b/HTML・CSS/HTML-work3/work3-lesson1.html
@@ -2,11 +2,15 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../HTML-work3/work3-lesson1.css"> 
     <!--ここにCSSファイルを読み込む処理を記述-->
     <link rel="stylesheet" href="work3-lesson1.css">
     <title>work3-lesson1</title>
 </head>
 <body>
+    <p class="red">ヘッダー</p>
+    <p class="blue">メイン</p>
+    <p class="yellow">フッター</p>
     <!--
        課題：① div要素を3つ作成、それぞれに下記クラス名を指定
         - header->赤 main->青 footer->黄色 の背景色を指定
