work3-lesson2.html

--- a/HTML・CSS/HTML-work3/work3-lesson2.html
+++ b/HTML・CSS/HTML-work3/work3-lesson2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../HTML-work3/work3-lesson2.css">
     <!--ここにCSSファイルを読み込む処理を記述-->
     <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="work3-lesson2.css">
@@ -20,6 +21,7 @@
     -->
 
     <div class="header">
+        <h1><ul></ul></h1>
     </div>
 
     <div class="main">
