--- a/HTML・CSS/HTML-work3/work3-lesson2.html
+++ b/HTML・CSS/HTML-work3/work3-lesson2.html
@@ -20,15 +20,13 @@
         課題の条件が満たせていることを確認して、このファイルを提出してください。
     -->
 
-    <div class="header">
-        <h1><ul></ul></h1>
+    <div class="container">
+        <h1 class="title">これ</h1>
+        <ul class="menu">
+            <li>ホーム</li>
+            <li>概要</li>
+            <li>会社紹介</li>
+        </ul>
     </div>
-
-    <div class="main">
-    </div>
-
-    <div class="footer">
-    </div>
-    
 </body>
-</html>
+</html>]
