--- a/HTML・CSS/HTML-work3/work3-lesson3.html
+++ b/HTML・CSS/HTML-work3/work3-lesson3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../HTML-work3/work3-lesson3.css">
     <!--ここにCSSファイルを読み込む処理を記述-->
     <link rel="stylesheet" href="work3-lesson3.css">
     <title>work3-lesson3</title>
@@ -16,8 +17,9 @@
         課題：⑤ class=“mainBox”の上のpaddingを60px  左のpaddingを50px追加
         課題の条件が満たせていることを確認して、このファイルを提出してください。
     -->
-<div>
-
-</div>
+<div class="container">
+    <h1 class="title">タイトル</h1>
+    <ul class="mainBox">サンプル</ul>
+    </div>
 </body>
 </html>
