--- a/JavaScript/work/JS work5.html
+++ b/JavaScript/work/JS work5.html
@@ -23,7 +23,14 @@
         const BoyB = Math.floor(Math.random() * 80) + 90;
         console.log(`BoyA = ${BoyA}, BoyB = ${BoyB}`);
         // ここより上の行は編集禁止です。
+
+        if (BoyA<400){
+          console.log('90');
+        }
   
+        if (BoyB<1000){
+          console.log('140');
+        }
   
       </script>
     
