--- a/JavaScript/work/JS work6.html
+++ b/JavaScript/work/JS work6.html
@@ -29,30 +29,30 @@
       let y = '10';// この行は編集禁止です。
 
       if (x != y) {
-        // ...
+        // ...xとyが等しくない。x は数値の 10、y は文字列の '10' です。JavaScriptの!=演算子は値だけを比較し、型を無視するため、x と y は等しいとみなされ、条件は 満たされない
       }
 
       if (x === y) {
-        // ...
+        // ...xとyが値も型も同じである。x は数値型、y は文字列型のため、型が異なり条件は 満たされない
       }
 
       //  2.問題：次のコードを見て、それぞれのif文が何をチェックしているかを説明してください。
       let num = 15;// この行は編集禁止です。
 
       if (num > 10) {
-        // ...
+        // ...numが10より大きい
       }
 
       if (num >= 15) {
-        // ...
+        // ...numが15以上か等しいか
       }
 
       if (num < 20) {
-        // ...
+        // ...numより20より小さい
       }
 
       if (num <= 15) {
-        // ...
+        // ...numが15以下か等いか
       }
 
       //  3,問題：次のコードを見て、それぞれのif文が何をチェックしているかを説明してください。
@@ -60,8 +60,9 @@
       let str2 = 'Apple';// この行は編集禁止です。
 
       if (str1 == str2) {
-        // ...
+        // ...str1とstt2が等しい等しい。この場合等しくないので満たされない
       }
     </script>
+    
 </body>
 </html>
