--- a/JavaScript/work/JS work11.html
+++ b/JavaScript/work/JS work11.html
@@ -19,7 +19,23 @@
         ③１〜２００までの数字で2の倍数かつ、５の倍数である数字だけをコンソールに出力させて下さい。
         */
        //下記から記述して下さい。課題のヒント：わからない方は条件分岐を確認してみて！
+    var count = 0;
+    while(count<=100){
+        console.log(count);
+        count++;
+    }
 
+    var count = 0;
+    while(count<=100){
+        console.log(count);
+        count+= 2 ;
+    }
+
+    var count = 0;
+    while(count<=200){
+        console.log(count);
+        count+= 2 + 5 ;
+    }
 
     </script>
 </body>
