--- a/JavaScript/work/JS work9.html
+++ b/JavaScript/work/JS work9.html
@@ -27,6 +27,35 @@
 
         //下記からコードを記述してください。
         //ヒント（）の中に（）を記述すると数学のように（）内を先に処理するというようなことができるよ！
+    let age = 21;
+        if (age >= 18 && age < 20 ){
+            console.log('未成年ではないけど、お酒は飲めません');
+        }
+        else if (age >= 20 ){
+            console.log('成人です');
+        }
+        else {
+            console.log('未成年です');
+        }
+
+     
+    let temp = 25;
+    let season = '夏';
+        if (temp < 1 && season === "冬") {
+            console.log("今日は非常に寒いです！");
+        }
+        else if (temp >= 15 && season === "冬") {
+            console.log("冬にしては暖かいです！");
+        }
+        else if (temp >= 30 || season === "夏") {
+            console.log("暑すぎて死ぬ！");
+        }
+        else if ((temp >= 50 && season ==="夏") || (temp < -100 && season ==="冬")){
+            console.log("死にました！");
+        }
+        else{
+            console.log("特に以上ありません");
+        }
     </script>
 </body>
 </html>
