--- a/JavaScript/work/JS work17.html
+++ b/JavaScript/work/JS work17.html
@@ -24,6 +24,20 @@
         // 問題4: オブジェクトのプロパティの追加
         // 上記で作成したオブジェクトに、新たに趣味というプロパティを追加してください。趣味は '読書'とします。
 
+        const person = {
+            name:'Taro',
+            age: 20
+        };
+        console.log(person);
+
+        console.log(person.name);
+
+        person.age = 21;
+        console.log(person);
+
+        person.hobby = '読書';
+        console.log(person);
+
     </script>
 </body>
 </html>
