--- a/JavaScript/work/JS work15.html
+++ b/JavaScript/work/JS work15.html
@@ -15,7 +15,15 @@
         をする引数「age」をもつ関数「Check」を宣言し。
         その後、関数「Check」を好きな引数を設定し実行して、返り値がコンソール出力されるようにしてください。*/
 
-    
+    function Check(age){
+        if (age >= 20) {
+            return '飲食禁煙できます。';
+        }else{
+            return '飲食喫煙できません。';
+        }
+    }
+    const result = Check(25);
+    console.log(result);
     </script>
 </body>
 </html>
