--- a/JavaScript/work/JS work16.html
+++ b/JavaScript/work/JS work16.html
@@ -20,6 +20,18 @@
             ③　配列「dog」に新しく値を追加してコンソール出力してください。
         */
 
+    let dog = ['プードル','チワワ','ゴールデンレトリバー','パグ','柴犬'];
+
+    console.log(dog[2]);
+    console.log(dog[4]);
+    console.log(dog[5]);
+
+    dog[3] = 'サラーリーマン';
+    console.log(dog);
+
+    dog.push('ポメラニアン');
+    console.log(dog);
+    
     </script>
 </body>
 </html>
